src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() - Birthdate)/365.2425)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Any_years_last_3_yrs_Tax_Filing_not_req__c</fullName>
        <description>Were there any years in the preceding three years the Applicant was not required by law to file a Federal Income Tax return?</description>
        <inlineHelpText>Were there any years in the preceding three years the Applicant was not required by law to file a Federal Income Tax return?</inlineHelpText>
        <label>Any years last 3 yrs Tax Filing not req?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apt_Unit__c</fullName>
        <label>Apt./Unit #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_Certification_Expiration_Date__c</fullName>
        <inlineHelpText>What is the expiration date for this lender&apos;s BMR certification?</inlineHelpText>
        <label>BMR Certification Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMR_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this lender BMR Certified?</inlineHelpText>
        <label>BMR Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Way_to_Reach_You__c</fullName>
        <label>Best Way to Reach You?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Residence Mail</fullName>
                </value>
                <value>
                    <fullName>Work Mail</fullName>
                </value>
                <value>
                    <fullName>Work Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>PO Box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_of_Preference_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate of Preference Holder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_of_Preference__c</fullName>
        <label>Certificate of Preference #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Company Name used for Property Agents.</description>
        <inlineHelpText>Company Name used for Property Agents.</inlineHelpText>
        <label>Company Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mailing_Address__c</fullName>
        <label>Contact Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Copy_Household_Current_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you wish to copy the Household&apos;s current address information for this member.</inlineHelpText>
        <label>Copy Household Current Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <formula>Street_Number__c &amp; &quot; &quot; &amp; Street_Name__c &amp; &quot; &quot; &amp; IF( TEXT(Street_Type__c)=&quot;[Not Applicable]&quot;,&quot;&quot;,TEXT(Street_Type__c)) &amp; IF(ISBLANK(Apt_Unit__c),&quot;&quot;, &quot; #&quot; &amp; Apt_Unit__c ) &amp; BR()
&amp; IF(Address_Line_2__c = &quot;&quot;, &quot;&quot;, Address_Line_2__c &amp; BR())
&amp; City__c &amp; &quot;, &quot; &amp; TEXT(State__c) &amp; &quot; &quot; &amp; Zip_Code__c</formula>
        <label>Current Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DALP_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this lender DALP Certified?</inlineHelpText>
        <label>DALP Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DALP_MCC_Certification_Expiration_Date__c</fullName>
        <inlineHelpText>What is the expiration date for this lender&apos;s DALP and MCC certifications?</inlineHelpText>
        <label>DALP &amp; MCC Certification Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Displaced_Tenant_Preference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Formerly The Ellis Act, Does this Contact have this preference?</description>
        <inlineHelpText>Formerly The Ellis Act, Does this Contact have this preference?</inlineHelpText>
        <label>Displaced Tenant Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_this_appear_on_another_title__c</fullName>
        <label>Does this appear on another title?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAHP_Cert_Exp_Date_Existing_Dev__c</fullName>
        <label>EAHP Cert. Exp. Date (Existing Dev.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAHP_Cert_Exp_Date_New_Dev__c</fullName>
        <label>EAHP Cert. Exp. Date (New Dev.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAHP_Certificate_Holder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EAHP Certificate Holder?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAHP_Certificate_Issue_Date__c</fullName>
        <label>EAHP Certificate Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Decline to state</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filed_Federal_Tax_Return_for_prior_year__c</fullName>
        <label>Filed Federal Tax Return for prior year?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Contact_Name__c</fullName>
        <formula>TEXT(Salutation) &amp; &quot; &quot; &amp; FirstName &amp; &quot; &quot; &amp; Middle_Name__c &amp; &quot; &quot; &amp; LastName &amp; &quot; &quot; &amp; TEXT(Name_Suffix__c)</formula>
        <label>Full Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Time_Student__c</fullName>
        <label>Full Time Student?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Trans Male</fullName>
                </value>
                <value>
                    <fullName>Trans Female</fullName>
                </value>
                <value>
                    <fullName>Not Listed</fullName>
                </value>
                <value>
                    <fullName>Decline to State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_an_Extension_of_Time_been_filed__c</fullName>
        <label>Has an Extension of Time been filed?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Filed_Federal_Tax_Return_for_prior_year__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_owned_a_unit_last_3_yrs__c</fullName>
        <label>Has owned a unit (last 3 yrs)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Head_of_Household2__c</fullName>
        <label>Head of Household</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Head_of_Household__c</fullName>
        <formula>ISPICKVAL(Relationship_to_Head_of_Household__c,&quot;Self&quot;)</formula>
        <label>Head of Household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identify_as_Lesbian_Gay_Bisexual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identify as Lesbian/Gay/Bisexual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_yes_which_years__c</fullName>
        <description>Please list the years in the most recent 3 years that you were not required to file a tax return.</description>
        <inlineHelpText>Please list the years in the most recent 3 years that you were not required to file a tax return.</inlineHelpText>
        <label>If yes, which years?</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_School__c</fullName>
        <label>In School?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Tax_1_Deduction_Type_Used__c</fullName>
        <label>Income Tax 1 Deduction Type Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Itemized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Tax_1_Filing_Status__c</fullName>
        <label>Income Tax 1 Filing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married Filing Jointly</fullName>
                </value>
                <value>
                    <fullName>Married Filing Separately</fullName>
                </value>
                <value>
                    <fullName>Head of Household</fullName>
                </value>
                <value>
                    <fullName>Qualifying Widow(er) with dependent Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Tax_1_Return_AGI__c</fullName>
        <label>Income Tax 1 Return AGI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Tax_1_Return_Gross_Income__c</fullName>
        <label>Income Tax 1 Return Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Tax_1_Return_Wages__c</fullName>
        <label>Income Tax 1 Return Wages</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Tax_1_Return_Year__c</fullName>
        <label>Income Tax 1 Return Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Tax_1_W2_s_Add_Up__c</fullName>
        <label>Income Tax 1 W2&apos;s Add Up?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Tax_2_Deduction_Type_Used__c</fullName>
        <label>Income Tax 2 Deduction Type Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Itemized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Tax_2_Filing_Status__c</fullName>
        <label>Income Tax 2 Filing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married Filing Jointly</fullName>
                </value>
                <value>
                    <fullName>Married Filing Separately</fullName>
                </value>
                <value>
                    <fullName>Head of Household</fullName>
                </value>
                <value>
                    <fullName>Qualifying Widow(er) with dependent Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Tax_2_Return_AGI__c</fullName>
        <label>Income Tax 2 Return AGI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Tax_2_Return_Gross_Income__c</fullName>
        <label>Income Tax 2 Return Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Tax_2_Return_Wages__c</fullName>
        <label>Income Tax 2 Return Wages</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Tax_2_Return_Year__c</fullName>
        <label>Income Tax 2 Return Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Tax_2_W2_s_Add_Up__c</fullName>
        <label>Income Tax 2 W2&apos;s Add Up?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Tax_3_Deduction_Type_Used__c</fullName>
        <label>Income Tax 3 Deduction Type Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Itemized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Tax_3_Filing_Status__c</fullName>
        <label>Income Tax 3 Filing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married Filing Jointly</fullName>
                </value>
                <value>
                    <fullName>Married Filing Separately</fullName>
                </value>
                <value>
                    <fullName>Head of Household</fullName>
                </value>
                <value>
                    <fullName>Qualifying Widow(er) with dependent Child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Tax_3_Return_AGI__c</fullName>
        <label>Income Tax 3 Return AGI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Tax_3_Return_Gross_Income__c</fullName>
        <label>Income Tax 3 Return Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Tax_3_Return_Wages__c</fullName>
        <label>Income Tax 3 Return Wages</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_Tax_3_Return_Year__c</fullName>
        <label>Income Tax 3 Return Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Tax_3_W2_s_Add_Up__c</fullName>
        <label>Income Tax 3 W2&apos;s Add Up?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Developer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Developer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Property_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Property Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Real_Estate_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Real Estate Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rental_Sales_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rental/Sales Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lender_Certification_Status__c</fullName>
        <label>Lender Certification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>In-training</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lender_Mortgage_Broker_Company_Name__c</fullName>
        <label>Lender/Mortgage Broker Company Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_in_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live in SF?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_or_Work_in_San_Francisco__c</fullName>
        <label>Live or Work in San Francisco?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Living_with_disabling_HIVAIDS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Living with disabling HIV/AIDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCC_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this lender MCC Certified?</inlineHelpText>
        <label>MCC Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_same_as_Current_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Click this checkbox if you wish to copy this person&apos;s current address into the Mailing Address field.</inlineHelpText>
        <label>Mailing Address same as Current Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Married_or_Domestic_Partnered__c</fullName>
        <label>Married or Domestic Partnered?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NMLS__c</fullName>
        <label>NMLS #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Suffix__c</fullName>
        <label>Name Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>Esq.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Req_d_to_File_Tax_Return_Explanation__c</fullName>
        <description>Please explain why you were not required to file a tax return for the list years.</description>
        <inlineHelpText>Please explain why you were not required to file a tax return for the list years.</inlineHelpText>
        <label>Not Req&apos;d to File Tax Return Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Head_of_Households__c</fullName>
        <formula>Account.Number_of_Head_of_Households__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Head of Households</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Box_Address__c</fullName>
        <label>PO Box Address</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Household_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this is the primary household member.</description>
        <inlineHelpText>Check this box if this is the primary household member.</inlineHelpText>
        <label>Primary Household Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <description>Primary Language of the Contact</description>
        <inlineHelpText>Primary Language of the Contact</inlineHelpText>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Cantonese Chinese</fullName>
                </value>
                <value>
                    <fullName>Mandarin Chinese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Tax_Year_Total_Income_Amount__c</fullName>
        <label>Prior Tax Year Total Income Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Race_Ethnicity_Other_details__c</fullName>
        <inlineHelpText>Feel free to describe your Race/Ethnicity if you selected &quot;Other&quot; for the optional Race/Ethnicity field above.</inlineHelpText>
        <label>Race/Ethnicity - Other details</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race_Ethnicity_optional__c</fullName>
        <label>OldRace/Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <description>Picklist to determine more granular racial/ethnic identity of applicant; dependent on Ethnicity picklist on Contact object.</description>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Ethnicity__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian/Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black/African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian/Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>American Indian/Alaskan Native and Black/African American</fullName>
                </value>
                <value>
                    <fullName>American Indian/Alaskan Native and White</fullName>
                </value>
                <value>
                    <fullName>Asian and White</fullName>
                </value>
                <value>
                    <fullName>Black/African American and White</fullName>
                </value>
                <value>
                    <fullName>Other/Multiracial</fullName>
                </value>
                <value>
                    <fullName>Decline to State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_Estate_License__c</fullName>
        <label>Real Estate License #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Code__c</fullName>
        <label>Registration Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Head_of_HH_if_Other__c</fullName>
        <label>Relationship to Head of HH if &quot;Other&quot;</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Head_of_Household__c</fullName>
        <label>Relationship to Head of Household</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Head_of_Household2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Registered Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Nephew</fullName>
                </value>
                <value>
                    <fullName>Niece</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Great Grandparent</fullName>
                </value>
                <value>
                    <fullName>In-Law</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Phone_Type__c</fullName>
        <label>Second Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Served_in_the_US_Military__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Served in the US Military</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sexual_Orientation_Other__c</fullName>
        <label>Sexual Orientation - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>